[tool.poetry]
name = "blinking_light"
version = "0.1.0"
description = "A little object oriented python practice that let's one turn on and off various lights"
authors = ["John MacGregor <jmacgregor@pillartechnology.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
